--- a/posicione-elementos-com-flexbox/css/style.css
+++ b/posicione-elementos-com-flexbox/css/style.css
@@ -53,14 +53,19 @@ body {
   text-align: center;
 }
 
+.conteudoPrincipal-cursos {
+  display: flex;
+  flex-wrap: wrap;
+}
 .conteudoPrincipal-cursos-link {
   height: 100px;
   background-color: #fff;
   text-align: center;
-  margin: 1%;
+  /* margin: 1%; */
   transition: 0.3s;
   box-shadow: 2px 2px 2px #ccc;
   position: relative;
+  width: 20%;
 }
 
 .conteudoPrincipal-cursos-link a {
@@ -70,7 +75,6 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  position: absolute;
   top: 0;
   left: 0;
 }
@@ -113,7 +117,7 @@ body {
 .rodapePrincipal-navMap-list {
   display: flex;
   flex-flow: column wrap;
-  height: 250px;
+  height: 260px;
 }
 
 .rodapePrincipal-patrocinadores .container {
