--- a/posicione-elementos-com-flexbox/css/style.css
+++ b/posicione-elementos-com-flexbox/css/style.css
@@ -11,6 +11,7 @@ body {
 .cabecalhoPrincipal .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cabecalhoPrincipal {
@@ -280,7 +281,7 @@ body {
   .cabecalhoPrincipal-nav {
     width: auto;
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
   }
 
   .cabecalhoPrincipal-nav-link {
@@ -325,5 +326,39 @@ body {
 
   .videoSobre-sobre {
     margin-left: 1.5em;
+  }
+}
+
+/* Mobile */
+
+@media (max-width: 768px) {
+  .cabecalhoPrincipal .container {
+    flex-direction: column;
+    align-items: initial;
+    text-align: center;
+  }
+  .conteudoPrincipal-cursos {
+    flex-direction: column;
+  }
+
+  .conteudoPrincipal-cursos-link {
+    width: 100%;
+    margin: 5px;
+  }
+
+  .rodapePrincipal-navMap-list {
+    height: auto;
+  }
+
+  .rodapePrincipal-patrocinadores .container {
+    flex-direction: column;
+  }
+
+  .rodapePrincipal-contatoForm-fieldset {
+    margin-right: 25px;
+  }
+
+  .rodapePrincipal-patrocinadores-list {
+    justify-content: space-around;
   }
 }
