--- a/projeto-ecommerce/css/style.css
+++ b/projeto-ecommerce/css/style.css
@@ -86,15 +86,18 @@ body {
 .menu a:hover {
   text-decoration: underline;
 }
-
+.carrosel-container {
+  display: flex;
+  justify-content: center;
+}
 .carrosel {
   height: 520px;
   width: 935px;
   border-radius: 20px;
   overflow: hidden;
   position: relative;
-  top: 50%;
-  left: 18%;
+  /* top: 50%;
+  left: 18%; */
 }
 .navigation {
   position: absolute;
